--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -3,13 +3,31 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
-
+    <!--设置编码过滤-->
+    <filter>
+        <filter-name>EncodingFilter</filter-name>
+        <filter-class>tmall.filter.EncodingFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>EncodingFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    <!--后台反射过滤-->
     <filter>
         <filter-name>BackServletFilter</filter-name>
         <filter-class>tmall.filter.BackServletFilter</filter-class>
     </filter>
     <filter-mapping>
         <filter-name>BackServletFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    <!--前台反射过滤-->
+    <filter>
+        <filter-name>ForeServletFilter</filter-name>
+        <filter-class>tmall.filter.ForeServletFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>ForeServletFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
@@ -20,5 +38,55 @@
     <servlet-mapping>
         <servlet-name>CategoryServlet</servlet-name>
         <url-pattern>/categoryServlet</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <servlet-name>PropertyServlet</servlet-name>
+        <servlet-class>tmall.servlet.PropertyServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>PropertyServlet</servlet-name>
+        <url-pattern>/propertyServlet</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <servlet-name>ProductServlet</servlet-name>
+        <servlet-class>tmall.servlet.ProductServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ProductServlet</servlet-name>
+        <url-pattern>/productServlet</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <servlet-name>ProductImageServlet</servlet-name>
+        <servlet-class>tmall.servlet.ProductImageServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ProductImageServlet</servlet-name>
+        <url-pattern>/productImageServlet</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <servlet-name>UserServlet</servlet-name>
+        <servlet-class>tmall.servlet.UserServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>UserServlet</servlet-name>
+        <url-pattern>/userServlet</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <servlet-name>OrderServlet</servlet-name>
+        <servlet-class>tmall.servlet.OrderServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>OrderServlet</servlet-name>
+        <url-pattern>/orderServlet</url-pattern>
+    </servlet-mapping>
+
+    <!--前台-->
+    <servlet>
+        <servlet-name>ForeServlet</servlet-name>
+        <servlet-class>tmall.servlet.ForeServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ForeServlet</servlet-name>
+        <url-pattern>/foreServlet</url-pattern>
     </servlet-mapping>
 </web-app>
