--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -3,6 +3,12 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
+
+    <!--修改默认主页-->
+    <!--<welcome-file-list>-->
+        <!--<welcome-file>forehome</welcome-file>-->
+    <!--</welcome-file-list>-->
+
     <!--设置编码过滤-->
     <filter>
         <filter-name>EncodingFilter</filter-name>
@@ -10,6 +16,15 @@
     </filter>
     <filter-mapping>
         <filter-name>EncodingFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    <!--需要登录的页面过滤跳转-->
+    <filter>
+        <filter-name>ForeAuthFilter</filter-name>
+        <filter-class>tmall.filter.ForeAuthFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>ForeAuthFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
     <!--后台反射过滤-->
